# localization_DBow3_mcl

./: .gitignore  CMakeLists.txt
cmake_modules/: FindDBoW3.cmake
config/: default.yaml
include/localization/: camera.h  common_include.h  config.h  frame.h  g2o_types.h  image_retrieve.h  map.h  mappoint.h  pose_estimation.h  visual_odometry.h
src/: CMakeLists.txt  camera.cpp  config.cpp  creat_database.cpp  frame.cpp  g2o_types.cpp  image_retrieve.cpp  map.cpp  mappoint.cpp  pose_estimation.cpp  visual_odometry.cpp  vocabulary_training.cpp
test/: CMakeLists.txt  image_retrieve_test.cpp  map_generate_test.cpp  pose_estimation_test.cpp  pose_txt_generate.cpp
